<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:keepScreenOn="true"
    android:background="@drawable/waiting_background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".WaitActivity" xmlns:app="http://schemas.android.com/apk/res/ihm.it.conquistador">
    
    <ihm.it.custom.TextViewPlus
        android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:shadowColor="@color/black"
        android:textColor="@color/white"
        android:shadowRadius="70"
        app:customFont="fonts/Ruritania.ttf"
        android:text="@string/app_name"
        android:textSize="30sp" />

    <ihm.it.custom.TextViewPlus
        android:id="@+id/slogan"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:text="@string/app_slogan"
        android:textColor="@color/white"
        android:shadowColor="@color/black"
        android:shadowRadius="70"
        app:customFont="fonts/Ruritania.ttf"
        android:textSize="20sp" />
    
    <RelativeLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="@drawable/parchemin"
        android:orientation="vertical" >
 
        <ihm.it.custom.TextViewPlus
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="140dp" 
            android:textSize="25sp"
            app:customFont="fonts/dali.ttf"
            android:textColor="@color/black"
            android:text="@string/waiting" />

         <ProgressBar
             style="@style/GenericProgressIndicator"
             android:layout_below="@+id/textView1"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="48dp" />

    </RelativeLayout>
    
</LinearLayout>
