<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res/ihm.it.conquistador"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".GameActivity" >

    <ihm.it.custom.TextViewPlus
        android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:gravity="center_horizontal"
        android:shadowColor="@color/black"
        android:shadowRadius="70"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:customFont="fonts/Ruritania.ttf" />

    <LinearLayout
        android:id="@+id/chart_container"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/parchemin2"
        android:orientation="vertical" >

         <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:orientation="horizontal"
            android:weightSum="0.9" >

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_weight="0.08"
                android:src="@drawable/conquiface1" />

            <ihm.it.custom.TextViewPlus
                android:id="@+id/player1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="0.6"
                android:text="@string/player1"
                android:textColor="@color/red"
                android:textSize="20sp"
                android:textStyle="bold"
                app:customFont="fonts/dali.ttf" />

            <ihm.it.custom.TextViewPlus
                android:id="@+id/score1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="0.3"
                android:text="1"
                android:textColor="@color/red"
                android:textSize="20sp"
                android:textStyle="bold"
                app:customFont="fonts/dali.ttf" />
        </LinearLayout> 
        
           <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:orientation="horizontal"
            android:weightSum="0.9" >

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_weight="0.08"
                android:src="@drawable/conquiface2" />

            <ihm.it.custom.TextViewPlus
                android:id="@+id/player2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="0.6"
                android:text="@string/player2"
                android:textColor="@color/yellow"
                android:textSize="20sp"
                android:textStyle="bold"
                app:customFont="fonts/dali.ttf" />

            <ihm.it.custom.TextViewPlus
                android:id="@+id/score2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="0.3"
                android:text="1"
                android:textColor="@color/yellow"
                android:textSize="20sp"
                android:textStyle="bold"
                app:customFont="fonts/dali.ttf" />
        </LinearLayout> 
<!-- 
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:orientation="horizontal"
            android:weightSum="0.9" >

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_weight="0.08"
                android:src="@drawable/conquiface2" />

            <ihm.it.custom.TextViewPlus
                android:id="@+id/player2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="0.6"
                android:text="@string/player2"
                android:textColor="@color/yellow"
                android:textSize="20sp"
                android:textStyle="bold"
                app:customFont="fonts/dali.ttf" />

            <ihm.it.custom.TextViewPlus
                android:id="@+id/score2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="0.3"
                android:shadowColor="@color/black"
                android:shadowRadius="80"
                android:text="1"
                android:textColor="@color/yellow"
                android:textSize="20sp"
                android:textStyle="bold"
                app:customFont="fonts/dali.ttf" />
        </LinearLayout>
 -->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:orientation="horizontal"
            android:weightSum="0.9" >

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_weight="0.08"
                android:src="@drawable/conquiface3" />

            <ihm.it.custom.TextViewPlus
                android:id="@+id/player3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="0.6"
                android:text="@string/player3"
                android:textColor="@color/green"
                android:textSize="20sp"
                android:textStyle="bold"
                app:customFont="fonts/dali.ttf" />

            <ihm.it.custom.TextViewPlus
                android:id="@+id/score3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="0.3"
                android:text="1"
                android:textColor="@color/green"
                android:textSize="20sp"
                android:textStyle="bold"
                app:customFont="fonts/dali.ttf" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:orientation="horizontal"
            android:weightSum="0.9" >

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_weight="0.08"
                android:src="@drawable/conquiface4" />

            <ihm.it.custom.TextViewPlus
                android:id="@+id/player4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="0.6"
                android:text="@string/player4"
                android:textColor="@color/blue"
                android:textSize="20sp"
                android:textStyle="bold"
                app:customFont="fonts/dali.ttf" />

            <ihm.it.custom.TextViewPlus
                android:id="@+id/score4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="0.3"
                android:text="1"
                android:textColor="@color/blue"
                android:textSize="20sp"
                android:textStyle="bold"
                app:customFont="fonts/dali.ttf" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>